tests/snapshots/recipe__jsonc_parsing_syntax_error.snap
---
source: tests/recipe.rs
expression: normalized_stderr
---
Error: Invalid JSONC syntax in recipes.jsonc: Unterminated array on line 2 column 20

Tip: Check for missing commas, brackets, or quotes. Most editors highlight syntax errors when you save the file with a .jsonc extension.
