tests/snapshots/recipe__no_catalog.snap
---
source: tests/recipe.rs
expression: stderr
---
Error: Not in a nutrition calculator catalog (or any parent directory)
Searched: /tmp, /
Run 'nutriterm init' to create a catalog.
