tests/snapshots/recipe__not_found_with_suggestions.snap
---
source: tests/recipe.rs
expression: snapshot_content
---
Available recipes: Chicken Rice Bowl
$ nutriterm recipe nonexistent-recipe
No matches for 'nonexistent-recipe'. Available recipes: Chicken Rice Bowl
