tests/snapshots/recipe__search_case_insensitive.snap
---
source: tests/recipe.rs
expression: snapshot_content
---
Available recipes: Chicken Rice Bowl
$ nutriterm recipe CHICKEN
Recipe: Chicken Rice Bowl

╭───────────────────────────┬──────────┬─────────────┬───────────┬───────┬─────────┬────────────╮
│  Name                     │  Weight  │  Net carbs  │  Protein  │  Fat  │  Fiber  │  Calories  │
├───────────────────────────┼──────────┼─────────────┼───────────┼───────┼─────────┼────────────┤
│ Chicken Breast (skinless) │  150.0 g │         0 g │    46.5 g │ 5.4 g │     0 g │   235 kcal │
│       Brown Rice (cooked) │  100.0 g │      23.0 g │     2.6 g │ 0.9 g │   1.8 g │   110 kcal │
│        Broccoli (steamed) │   80.0 g │       5.6 g │     2.4 g │ 0.3 g │   2.1 g │    35 kcal │
│                     Total │  330.0 g │      28.6 g │    51.5 g │ 6.6 g │   3.9 g │   380 kcal │
╰───────────────────────────┴──────────┴─────────────┴───────────┴───────┴─────────┴────────────╯

150.0 g  Chicken Breast (skinless)
100.0 g  Brown Rice (cooked)
 80.0 g  Broccoli (steamed)
